--- a/estilo/styles.css
+++ b/estilo/styles.css
@@ -12,17 +12,18 @@
 
 body {
     height: 100vh;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(to bottom, rgb(33, 33, 121) , rgba(0, 0, 0, 0.925));
+    background: linear-gradient(50deg, rgb(33, 33, 121) , rgba(0, 0, 0, 0.925));
 }
 
 
 .container {
     width: 380px;
     height: 350px;
-    background-color: rgba(0, 0, 0, 0.322);
+    background-color: rgb(4, 10, 83);
     
     box-shadow: 4px 5px 10px rgba(0, 0, 0, 0.37);
     border-radius: 10px;
@@ -30,9 +31,9 @@ body {
     padding: 25px 35px;
 }
 
-.container h1 {
+ h1 {
     text-align: center;
-    margin: 0px 0px 10px;
+    margin: 10px 0px 10px;
 }
 
 .box-input {
@@ -106,6 +107,7 @@ body {
     font-weight: 700;
     margin-bottom: 5px;
     margin-top: 10px;
+    transition: all .4s ease .2ms;
 }
 .login button:hover {
     transition: .2s;
