--- a/estilo/media.css
+++ b/estilo/media.css
@@ -1,6 +1,19 @@
 @charset "UTF-8";
 
 @media (min-width: 300px) and (max-width: 450px) {
+
+    * {
+        box-sizing: border-box;
+    }
+
+    html, body {
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+        width: 100%;
+        overflow-x: hidden;
+    }
+
     .container {
         max-width: 300px;
         max-height: 280px;
