--- a/estilo/styles.css
+++ b/estilo/styles.css
@@ -10,9 +10,14 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+    html, body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        overflow-x: hidden;
+    }
 body {
     height: 100vh;
-    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
