--- a/estilo/media.css
+++ b/estilo/media.css
@@ -2,7 +2,10 @@
 
 @media (min-width: 300px) and (max-width: 450px) {
 
-
+         body {
+            width: 100%;
+            height: 100vh;
+         }
 
     .container {
         max-width: 300px;
