--- a/estilo/styles.css
+++ b/estilo/styles.css
@@ -19,6 +19,8 @@
     
 body {
     height: 100vh;
+    width: 100%;
+    overflow-x: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
