--- a/estilo/styles.css
+++ b/estilo/styles.css
@@ -11,9 +11,6 @@
 }
 
     html, body {
-        margin: 0;
-        padding: 0;
-        width: 100%;
         overflow-x: hidden;
     }
     
@@ -87,8 +84,9 @@ body {
     font-size: 15px;
 }
 
+
 .remember-forgot input {
-    accent-color: #ffffff;
+    accent-color: #696cfc;
 }
 
 .remember-forgot a {
